@@ -612,8 +612,6 @@ namespace Orthanc
     ModalityManufacturer_GenericNoWildcardInDates,
     ModalityManufacturer_GenericNoUniversalWildcard,
     ModalityManufacturer_StoreScp,
-    ModalityManufacturer_ClearCanvas,
-    ModalityManufacturer_Dcm4Chee,
     ModalityManufacturer_Vitrea,
     ModalityManufacturer_GE
   };
